@@ -1,0 +1,37 @@
+/* This testcase is part of GDB, the GNU debugger.
+
+   Copyright 2008 Free Software Foundation, Inc.
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 3 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
+
+int xyz;
+
+int bar ()
+{
+  xyz = 2; /* break in bar */
+  return 1;
+}
+
+int foo ()
+{
+  xyz = 1; /* break in foo */
+  return bar ();
+}
+
+int main ()
+{
+  xyz = 0; /* break in main */
+  foo ();
+  return (xyz == 2 ? 0 : 1);
+}
