@@ -1,3 +1,12 @@
+2008-09-01  Michael Snyder  <msnyder@vmware.com>
+
+	* gdb.twreverse: New directory (may be renamed later).
+	* gdb.twreverse/Makefile.in: New file.
+	* gdb.twreverse/break-reverse.exp: New file.
+	* gdb.twreverse/break-reverse.c: New file.
+	* configure.in: Add gdb.twreverse directory.
+	* configure: Regenerate.
+
 2008-07-17  Paul Pluzhnikov  <ppluzhnikov@google.com>
 
 	* gdb.base/foll-fork.exp: Fix for Linux/VDSO failure.
